--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
   h1 {text-align: center;
   font-size: 40px;}
+
   p {text-align: center;
-  color: rgb(186, 37, 223)}
+  color: rgb(186, 37, 223);
+  border: 3px rgb(247, 243, 22);
+}
   div {text-align: center;}
   body {
   background-color: rgb(88, 96, 99); 
+  
 }
 
 nav ul li a{
@@ -25,13 +29,48 @@ li a:hover{
 }
 nav ul li {
   display: inline;
+ border: 1px solid rgb(12, 235, 112);
+
 }
 ul{
   margin: 0;
  padding: 0;
  list-style-type: none;
  overflow: hidden;
- background-color: #333
+ background-color: #333;
+}
 
+#top{
+  background-color: lightblue;
+  color: black;
+  padding: 40px;
+  text-align: center;
+}
 
+.para{
+  background-color: rgb(163, 197, 13);
+  color: white;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+
+#foot {
+  color: rgb(0, 0, 0);
+  padding: 20px;
+  border: 2px solid black;
+  background-color: hsla(120,100%,50%,0.3);
+}
+#but {
+  border-radius: 50%;
+ background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
