--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
   font-size: 40px;}
 
   p {text-align: center;
-  color: rgb(186, 37, 223);
+  color: rgb(223, 232, 241);
   border: 3px rgb(247, 243, 22);
+  font-size: 30px;
 }
   div {text-align: center;}
   body {
